; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/serial/extr_io_ti.c_uart_mode_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/serial/extr_io_ti.c_uart_mode_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.usb_serial_port = type { i32 }
%struct.edgeport_port = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @uart_mode_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uart_mode_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.usb_serial_port*, align 8
  %8 = alloca %struct.edgeport_port*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.usb_serial_port* @to_usb_serial_port(%struct.device* %9)
  store %struct.usb_serial_port* %10, %struct.usb_serial_port** %7, align 8
  %11 = load %struct.usb_serial_port*, %struct.usb_serial_port** %7, align 8
  %12 = call %struct.edgeport_port* @usb_get_serial_port_data(%struct.usb_serial_port* %11)
  store %struct.edgeport_port* %12, %struct.edgeport_port** %8, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.edgeport_port*, %struct.edgeport_port** %8, align 8
  %15 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %16)
  ret i32 %17
}

declare dso_local %struct.usb_serial_port* @to_usb_serial_port(%struct.device*) #1

declare dso_local %struct.edgeport_port* @usb_get_serial_port_data(%struct.usb_serial_port*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
